[tool.poetry]
name = "image-seperator"
version = "0.1.0"
description = ""
authors = ["parker <qkrrudtjr954@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.15.2"
blinker = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
